--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@types/echarts": "^4.1.9",
+    "echarts": "^4.2.1",
     "element-ui": "^2.9.1",
     "moment": "^2.24.0",
     "qs": "^6.7.0",
