--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "vue": "^2.6.10",
     "vue-bus-ts": "^1.0.8",
     "vue-class-component": "^7.1.0",
+    "vue-grid-layout": "^2.3.4",
     "vue-property-decorator": "^7.3.0",
     "vue-router": "^3.0.6",
     "vuex": "^3.1.1",
