首页样式 日期控件 报表导出

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "stompjs": "^2.3.3",
     "vue": "^2.6.10",
     "vue-bus-ts": "^1.0.8",
+    "vue-calendar-component": "^2.8.2",
     "vue-class-component": "^7.1.0",
     "vue-grid-layout": "^2.3.4",
     "vue-property-decorator": "^7.3.0",
