--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "vuex-class": "^0.3.2",
     "vxe-table": "^1.12.11",
     "vxe-table-plugin-element": "^1.0.0",
+    "wangeditor": "^3.1.1",
     "xe-utils": "^1.9.4"
   },
   "devDependencies": {
