--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "echarts": "^4.2.1",
     "element-ui": "^2.13.0",
     "moment": "^2.24.0",
+    "mpvue-calendar": "^2.3.1",
     "qs": "^6.7.0",
     "stompjs": "^2.3.3",
     "vue": "^2.6.10",
