--- a/public/static/config.json
+++ b/public/static/config.json
@@ -1,9 +1,8 @@
 {
-    "dbid":"ZT1",
-    "ApiUrl": "http://127.0.0.1:9999/jd",
-    "MQTT_SERVICE" : "ws://115.28.191.203:85/ws",
-    "MQTT_USERNAME":"bipmq",
-    "MQTT_PASSWORD":"bipmq",
-    "MQTT_HOST":"bipmq"
+    "dbid": "01",
+    "ApiUrl": "http://211.144.37.205/air-super/",
+    "MQTT_SERVICE": "ws://211.144.37.205:15674/ws",
+    "MQTT_USERNAME": "bipmq",
+    "MQTT_PASSWORD": "bipmq",
+    "MQTT_HOST": "bipmq"
 }
-   
