--- a/public/static/config.json
+++ b/public/static/config.json
@@ -1,6 +1,6 @@
 {
     "dbid": "01",
-    "ApiUrl": "http://211.144.37.205/air-super",
+    "ApiUrl": "http://www.juminfuwu.cn:88/CRM/",
     "MQTT_SERVICE": "ws://211.144.37.205:15674/ws",
     "MQTT_USERNAME": "bipmq",
     "MQTT_PASSWORD": "bipmq",
