--- a/package.json
+++ b/package.json
@@ -22,13 +22,15 @@
     "vue-class-component": "^7.1.0",
     "vue-grid-layout": "^2.3.4",
     "vue-property-decorator": "^7.3.0",
+    "vue-qr": "^2.2.1",
     "vue-router": "^3.0.6",
     "vuex": "^3.1.1",
     "vuex-class": "^0.3.2",
     "vxe-table": "^1.15.29",
     "vxe-table-plugin-element": "^1.5.6",
     "wangeditor": "^3.1.1",
-    "xe-utils": "^2.0.0"
+    "xe-utils": "^2.0.0",
+    "xlsx": "^0.16.2"
   },
   "devDependencies": {
     "typescript": "^3.5.1",
