--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "vuex-class": "^0.3.2",
     "vxe-table": "^1.15.29",
     "vxe-table-plugin-element": "^1.5.6",
+    "vxe-table-plugin-export-xlsx": "^1.6.0",
     "wangeditor": "^3.1.1",
     "xe-utils": "^2.6.6",
     "xlsx": "^0.16.2"
