--- a/public/static/config.json
+++ b/public/static/config.json
@@ -8,5 +8,5 @@
     "Project_Name":"飞机施药质量监测监管自动化计量综合服务平台",
     "COPYRIGHT":"2020：一风立创科技 版权所有",
     "SMSURL":"http://www.bip-soft.com:8080/ssms/",
-    "SHOWPORTAL":true
+    "SHOWPORTAL":false
 }
