--- a/public/static/config.json
+++ b/public/static/config.json
@@ -1,6 +1,6 @@
 {
-    "dbid": "154",
-    "ApiUrl": "http://127.0.0.1:9999/jd",
+    "dbid": "M1",
+    "ApiUrl": "http://www.juminfuwu.cn:88/bip-amb/",
     "MQTT_SERVICE": "ws://115.28.191.203:85/ws",
     "MQTT_USERNAME": "bipmq",
     "MQTT_PASSWORD": "bipmq",
