--- a/public/static/config.json
+++ b/public/static/config.json
@@ -1,6 +1,6 @@
 {
-    "dbid": "M1",
-    "ApiUrl": "http://www.juminfuwu.cn:88/bip-amb/",
+    "dbid": "01",
+    "ApiUrl": "https://test.juminfuwu.cn/bip-hr/",
     "MQTT_SERVICE": "ws://115.28.191.203:85/ws",
     "MQTT_USERNAME": "bipmq",
     "MQTT_PASSWORD": "bipmq",
