--- a/public/static/config.json
+++ b/public/static/config.json
@@ -1,6 +1,6 @@
 {
-    "dbid": "01",
-    "ApiUrl": "https://test.juminfuwu.cn/bip-hr/",
+    "dbid": "ERP",
+    "ApiUrl": "http://192.168.3.5:9999/jd",
     "MQTT_SERVICE": "ws://115.28.191.203:85/ws",
     "MQTT_USERNAME": "bipmq",
     "MQTT_PASSWORD": "bipmq",
