--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "vue-property-decorator": "^7.3.0",
     "vue-qr": "^2.2.1",
     "vue-router": "^3.4.3",
+    "vue-ueditor-wrap": "^2.4.4",
     "vuex": "^3.1.1",
     "vuex-class": "^0.3.2",
     "vxe-table": "^1.15.29",
