--- a/public/static/config.json
+++ b/public/static/config.json
@@ -1,5 +1,5 @@
 {
-    "dbid": "154",
+    "dbid": "142N",
     "ApiUrl": "http://127.0.0.1:9999/jd/",
     "MQTT_SERVICE": "ws://115.28.191.203:85/ws",
     "MQTT_USERNAME": "bipmq",
