--- a/public/static/config.json
+++ b/public/static/config.json
@@ -1,6 +1,6 @@
 {
-    "dbid": "01",
-    "ApiUrl": "http://47.104.211.216:30032/bip-amb",
+    "dbid": "156",
+    "ApiUrl": "http://127.0.0.1:9999/jd",
     "MQTT_SERVICE": "ws://115.28.191.203:85/ws",
     "MQTT_USERNAME": "bipmq",
     "MQTT_PASSWORD": "bipmq",
