--- a/public/static/config.json
+++ b/public/static/config.json
@@ -1,6 +1,6 @@
 {
     "dbid": "156",
-    "ApiUrl": "http://127.0.0.1:9999/jd",
+    "ApiUrl": "http://127.0.0.1:9999/jd/",
     "MQTT_SERVICE": "ws://115.28.191.203:85/ws",
     "MQTT_USERNAME": "bipmq",
     "MQTT_PASSWORD": "bipmq",
