--- a/public/static/config.json
+++ b/public/static/config.json
@@ -1,6 +1,6 @@
 {
     "dbid": "01",
-    "ApiUrl": "https://test.juminfuwu.cn/bip-hr/",
+    "ApiUrl": "http://47.104.211.216:8089/bip-mine/",
     "MQTT_SERVICE": "ws://115.28.191.203:85/ws",
     "MQTT_USERNAME": "bipmq",
     "MQTT_PASSWORD": "bipmq",
