--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
     "@types/echarts": "^4.1.9",
     "@types/stompjs": "^2.3.4",
     "core-js": "^2.6.11",
-    "dhtmlx-gantt": "^7.0.13",
     "dom-to-image": "^2.6.0",
     "echarts": "^4.2.1",
     "element-ui": "^2.13.2",
+    "gantt-elastic": "^1.0.12",
     "moment": "^2.24.0",
     "mpvue-calendar": "^2.3.1",
     "qs": "^6.7.0",
