--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "echarts-liquidfill": "^2.0.6",
     "element-ui": "^2.13.2",
     "gantt-elastic": "^1.0.12",
+    "highcharts": "^9.0.1",
     "moment": "^2.24.0",
     "mpvue-calendar": "^2.3.1",
     "qs": "^6.7.0",
