--- a/public/static/config.json
+++ b/public/static/config.json
@@ -1,5 +1,5 @@
 {
-    "dbid": "158",
+    "dbid": "30",
     "ApiUrl": "http://127.0.0.1:9999/jd/",
     "MQTT_SERVICE": "ws://115.28.191.203:85/ws",
     "MQTT_USERNAME": "bipmq",
@@ -8,5 +8,5 @@
     "Project_Name":"飞机施药质量监测监管自动化计量综合服务平台",
     "COPYRIGHT":"2020：一风立创科技 版权所有",
     "SMSURL":"http://www.bip-soft.com:8080/ssms/",
-    "ITEMTYPE":"air-super"
+    "ITEMTYPE":"itemCtrl"
 }
