--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "highcharts": "^9.0.1",
     "moment": "^2.24.0",
     "mpvue-calendar": "^2.3.1",
+    "particles.js": "^2.0.0",
     "qs": "^6.7.0",
     "stompjs": "^2.3.3",
     "vue": "^2.6.10",
