--- a/public/static/config.json
+++ b/public/static/config.json
@@ -1,12 +1,13 @@
 {
-    "dbid": "30",
+    "dbid": "161",
     "ApiUrl": "http://127.0.0.1:9999/jd/",
     "MQTT_SERVICE": "ws://115.28.191.203:85/ws",
     "MQTT_USERNAME": "bipmq",
     "MQTT_PASSWORD": "bipmq",
     "MQTT_HOST": "bipmq",
-    "Project_Name":"飞机施药质量监测监管自动化计量综合服务平台",
+    "Project_Name":"企业研发项目费用管理服务系统",
     "COPYRIGHT":"2020：一风立创科技 版权所有",
     "SMSURL":"http://www.bip-soft.com:8080/ssms/",
-    "ITEMTYPE":"itemCtrl"
+    "ITEMTYPE":"bip-zzz",
+    "AouthTokenUrl":"http://127.0.0.1:9999/xxxx/oauth/check_token"
 }
