bug 修改，样式修改，规则表格对齐修改，表格多级表头

--- a/package.json
+++ b/package.json
@@ -15,13 +15,15 @@
     "echarts-gl": "^1.1.1",
     "echarts-liquidfill": "^2.0.6",
     "element-ui": "^2.13.2",
+    "exceljs": "^4.2.1",
     "gantt-elastic": "^1.0.12",
     "highcharts": "^9.0.1",
     "moment": "^2.24.0",
-    "mpvue-calendar": "^2.3.1",
+    "mpvue-calendar": "^2.3.7",
     "particles.js": "^2.0.0",
     "qs": "^6.7.0",
     "stompjs": "^2.3.3",
+    "v-viewer": "^1.4.1",
     "vue": "^2.6.10",
     "vue-bus-ts": "^1.0.8",
     "vue-calendar-component": "^2.8.2",
@@ -33,11 +35,11 @@
     "vue-ueditor-wrap": "^2.4.4",
     "vuex": "^3.1.1",
     "vuex-class": "^0.3.2",
-    "vxe-table": "^1.15.30",
-    "vxe-table-plugin-element": "^1.5.6",
-    "vxe-table-plugin-export-xlsx": "^1.6.0",
+    "vxe-table": "^3.3.7",
+    "vxe-table-plugin-element": "^1.11.2",
+    "vxe-table-plugin-export-xlsx": "^2.2.1",
     "wangeditor": "^3.1.1",
-    "xe-utils": "^2.6.6",
+    "xe-utils": "^3.2.1",
     "xlsx": "^0.16.2"
   },
   "devDependencies": {
