--- a/public/static/config.json
+++ b/public/static/config.json
@@ -1,6 +1,6 @@
 {
-    "dbid": "01",
-    "ApiUrl": "https://greatdou.com/RDCost/",
+    "dbid": "500",
+    "ApiUrl": "http://127.0.0.1:9999/jd/",
     "MQTT_SERVICE": "ws://115.28.191.203:85/ws",
     "MQTT_USERNAME": "bipmq",
     "MQTT_PASSWORD": "bipmq",
@@ -8,7 +8,7 @@
     "Project_Name":"企业研发项目费用管理服务系统",
     "COPYRIGHT":"2020：一风立创科技 版权所有",
     "SMSURL":"http://www.bip-soft.com:8080/ssms/",
-    "ITEMTYPE":"bip-zzz",
-    "AouthTokenUrl":"http://192.168.17.76:8101",
-    "UniteLoginUrl":"http://192.168.17.76:8101/login#/"
+    "ITEMTYPE":"bip-amb",
+    "UniteLoginUrl":"http://192.168.17.76:8101/login#/",
+    "SKIN":"theme1"
 }
