--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "particles.js": "^2.0.0",
     "qs": "^6.7.0",
     "stompjs": "^2.3.3",
-    "v-viewer": "^1.4.1",
+    "v-viewer": "1.4.1",
     "vue": "^2.6.10",
     "vue-bus-ts": "^1.0.8",
     "vue-calendar-component": "^2.8.2",
