--- a/public/static/config.json
+++ b/public/static/config.json
@@ -1,6 +1,6 @@
 {
     "dbid": "01",
-    "ApiUrl": "http://121.5.109.97:8080/cattle_breed/",
+    "ApiUrl": "https://greatdou.com/itemCtrl/",
     "MQTT_SERVICE": "ws://115.28.191.203:85/ws",
     "MQTT_USERNAME": "bipmq",
     "MQTT_PASSWORD": "bipmq",
@@ -8,7 +8,7 @@
     "Project_Name":"企业研发项目费用管理服务系统",
     "COPYRIGHT":"2021：HCR-数字农业事业部 版权所有",
     "SMSURL":"http://www.bip-soft.com:8080/ssms/",
-    "ITEMTYPE":"cattle_breed",
+    "ITEMTYPE":"itemCtrl",
     "UniteLoginUrl":"http://192.168.17.76:8101/login#/",
     "SKIN":"theme1"
 }
