--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "element-ui": "^2.13.2",
     "exceljs": "^4.2.1",
     "gantt-elastic": "^1.0.12",
+    "gantt-elastic-header": "^0.1.11",
     "highcharts": "^9.0.1",
     "moment": "^2.24.0",
     "mpvue-calendar": "^2.3.7",
@@ -33,13 +34,15 @@
     "vue-qr": "^2.2.1",
     "vue-router": "^3.4.3",
     "vue-ueditor-wrap": "^2.4.4",
+    "vue-xlsx-table": "^1.2.8",
     "vuex": "^3.1.1",
     "vuex-class": "^0.3.2",
     "vxe-table": "^3.3.8",
     "vxe-table-plugin-element": "^1.11.2",
     "vxe-table-plugin-export-xlsx": "^2.2.1",
+    "vxe-utils": "^2.0.1",
     "wangeditor": "^3.1.1",
-    "xe-utils": "^3.2.1",
+    "xe-utils": "^3.5.2",
     "xlsx": "^0.16.2"
   },
   "devDependencies": {
