--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue3.3",
+  "name": "bip-web",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -7,18 +7,25 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@antv/hierarchy": "^0.6.8",
+    "@antv/matrix-util": "^3.0.4",
+    "@antv/x6": "^1.30.2",
+    "@antv/x6-vue-shape": "^1.3.1",
     "@types/echarts": "^4.1.9",
     "@types/stompjs": "^2.3.4",
+    "@vue/composition-api": "^1.4.9",
+    "antv": "^0.2.2",
     "core-js": "^2.6.11",
     "dom-to-image": "^2.6.0",
     "echarts": "^4.2.1",
     "echarts-gl": "^1.1.1",
     "echarts-liquidfill": "^2.0.6",
-    "element-ui": "^2.13.2",
+    "element-ui": "^2.15.6",
     "exceljs": "^4.2.1",
     "gantt-elastic": "^1.0.12",
     "gantt-elastic-header": "^0.1.11",
     "highcharts": "^9.0.1",
+    "lodash": "^4.17.21",
     "moment": "^2.24.0",
     "mpvue-calendar": "^2.3.7",
     "particles.js": "^2.0.0",
@@ -37,7 +44,7 @@
     "vue-xlsx-table": "^1.2.8",
     "vuex": "^3.1.1",
     "vuex-class": "^0.3.2",
-    "vxe-table": "^3.3.8",
+    "vxe-table": "^3.5.1",
     "vxe-table-plugin-element": "^1.11.2",
     "vxe-table-plugin-export-xlsx": "^2.2.1",
     "vxe-utils": "^2.0.1",
