--- a/public/static/config.json
+++ b/public/static/config.json
@@ -1,6 +1,6 @@
 {
-    "dbid": "500",
-    "ApiUrl": "http://127.0.0.1:9999/jd/",   
+    "dbid": "01",
+    "ApiUrl": "http://121.5.109.97:8080/registration/",
     "MQTT_SERVICE": "ws://115.28.191.203:85/ws",
     "MQTT_USERNAME": "bipmq",
     "MQTT_PASSWORD": "bipmq",
@@ -8,7 +8,10 @@
     "Project_Name":"ShineOn-OMS",
     "COPYRIGHT":"",
     "SMSURL":"http://www.bip-soft.com:8080/ssms/",
-    "ITEMTYPE":"itemCtrl",
+    "ITEMTYPE":"registration",
     "UniteLoginUrl":"http://192.168.17.76:8101/login#/",
-    "SKIN":"theme2"
+    "SKIN":"theme2",
+    "fileOnlinePreviewUrl":"http://115.28.191.203:8012",
+    "CookieKey":"dev.sso.login.account.operation.auth"
 }
+
